syntax= "proto3";
package com.grpc.GRPC;
import "google/api/field_behavior.proto";
option java_multiple_files=true;
option java_package = "com.grpc.GRPC";

message BookDetails{
  int32 bookId=1  [(google.api.field_behavior) = REQUIRED];
  string name=2 [(google.api.field_behavior) = REQUIRED];
  double  price=3 [(google.api.field_behavior) = REQUIRED];
  string authorName=4 [(google.api.field_behavior) = REQUIRED];
}
