syntax= "proto3";
package  com.grpc.GRPC;

import "book.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/api/field_behavior.proto";
import "google/rpc/error_details.proto";
import "google/api/annotations.proto";
option java_multiple_files=true;
option java_package = "com.grpc.GRPC";

service BooKDetailsService {

  rpc createBook(CreateBookRequest) returns (CreateBookResponse) {
    option (google.api.http) = {
      post: "/createBook",
      body: "*"
    };
  }
  rpc getBook(GetBookRequest) returns (GetBookResponse){
    option (google.api.http) = {
      get: "/getBook/{bookId}"
    };
  }
  rpc getAllBook(GetAllBooksRequest) returns (GetAllBookResponse){
    option (google.api.http) = {
      get: "/getAllBook"
    };
  }

  rpc updateBook(UpdateBookRequest) returns (UpdateBookResponse){
    option (google.api.http) = {
      put: "/updateBook/{bookDetails.bookId}",
      body: "*"
    };
  }
  rpc deleteBook(DeleteBookRequest) returns (google.protobuf.Empty);
}

message CreateBookRequest{
  BookDetails bookDetails=1;
}
message CreateBookResponse{
  oneof message{
    string successMessage=1;
    string errorMessage=2;
  }
}
message GetBookRequest{
  int32 bookId=1;
}

message GetBookResponse{
  BookDetails bookDetails=1;
}
message GetAllBooksRequest{
google.protobuf.Int32Value sizeofPage=1  [(google.api.field_behavior) = OPTIONAL];
google.protobuf.StringValue order=2    [(google.api.field_behavior) = OPTIONAL];
}
message GetAllBookResponse{
  repeated BookDetails bookDetails=1;
}
message UpdateBookRequest{
  BookDetails bookDetails=1;
}
message UpdateBookResponse{
  BookDetails bookDetails=1;
}
message DeleteBookRequest{
  int32 id=1;
}


message ValidationError {
  string field = 1;
  string description = 2;
}
